Renamed report filename + fixed header + fixed date

--- a/report/report.tex
+++ b/report/report.tex
@@ -1,9 +1,10 @@
 \documentclass[a4paper, 11pt]{article}
 \usepackage{template}
 
-\title{Finding and documenting design patterns \\[1ex] \large Software Design and Modelling, Assignment 1}
+\title{Finding and Documenting Design Patterns\\
+\large Software Design and Modelling, Università della Svizzera Italiana}
 \author{Luca Di Bello}
-\date{\today}
+\date{\displaydate{today}}
 
 \begin{document}
 \maketitle
