--- a/report/template.sty
+++ b/report/template.sty
@@ -28,4 +28,4 @@
 
 % Define some useful dates
 \newdate{projectdate}{12}{10}{2024}
-\date{\displaydate{projectdate}}
+\newdate{today}{\day}{\month}{\year}
