Updated report with some new details about the factory method creational pattern

--- a/report/contents/analysis.tex
+++ b/report/contents/analysis.tex
@@ -25,6 +25,16 @@ After running the design pattern analysis tool on the entire \texttt{com.github.
 
 \subsubsection{Factory Method}
 
+The tool detected the usage of the \textit{Factory Method} design pattern in the following classes/interfaces:
+
+\begin{itemize}
+  \item \texttt{NodeFactory}: Interface with several default implementations. 
+  \item \texttt{LinkedDequeue}
+  \item \texttt{LocalAsyncCache}
+  \item \texttt{AsyncLoadingCache}
+  \item \texttt{StripedBuffer}
+\end{itemize}
+
 \subsubsection{Singleton}
 
 \subsection{Creational Design Patterns} 
