Fixed two chapters

--- a/report/contents/analysis.tex
+++ b/report/contents/analysis.tex
@@ -1,6 +1,6 @@
 \section{Analysis of results}
 
-After running the design pattern analysis tool on the entire \texttt{com.github.benmanes.caffeine.cache} package the tool was able to find the usage of seven design patterns. In this report we will analyze the most idiomatic usages of the design patterns found in the \textit{Caffeine} library. Each section will present a brief description of the design pattern and its usage in the library.
+After running the design pattern analysis tool on the entire \texttt{com.github.benmanes.caffeine.cache} package, the tool was able to find the usage of seven design patterns. In this report we will analyze the most idiomatic usages of the design patterns found in the \textit{Caffeine} library. Each section will present a brief description of the design pattern and its usage in the library.
 
 \subsection{Creational Design Patterns}
 
